--- a/sections/01-what-is-nestjs.html
+++ b/sections/01-what-is-nestjs.html
@@ -3,13 +3,11 @@
   <div><hr /></div>
   <div>
     <ul>
-      <li>
-        a framework that helps build Node.JS server-side applications
-      </li>
+      <li>a framework that helps build Node.JS server-side applications</li>
       <li>uses Typescript and depends on Angular architecture</li>
       <li>
-        extends Node.JS by adding modular organization and a wide
-        range of libraries
+        extends Node.JS by adding modular organization and a wide range of
+        libraries
       </li>
     </ul>
   </div>
