--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <body>
     <div class="reveal">
       <div class="slides">
-        <section>Slide 1</section>
-        <section>Slide 2</section>
+        <section data-markdown="pages/00-welcome.html"></section>
       </div>
     </div>
 
