Add what is antora content

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div class="slides">
         <section data-markdown="pages/00-welcome.html"></section>
         <section data-markdown="pages/01-overview.html"></section>
+        <section data-markdown="pages/02-what-is-antora.html"></section>
       </div>
     </div>
 
