Update content and add custom css

--- a/pages/02-what-is-antora.html
+++ b/pages/02-what-is-antora.html
@@ -3,14 +3,20 @@
   <div><hr /></div>
   <div>
     <div>
-      <ul>
-        <li>ease to create and publish documentation for the tech writers</li>
-        <li>
+      <ul class="r-fit-text">
+        <li class="fragment cList">
+          eases to create and publish documentation for the tech writers
+        </li>
+        <li class="fragment cList">
           transforms organized AsciiDoc contents in git repos into a website
         </li>
-        <li>provides separation of content, configuration and presentation</li>
-        <li>automates the compilation, validation and publishing processes</li>
-        <li>reuses the shared materials to avoid DRY</li>
+        <li class="fragment cList">
+          provides separation of content, configuration and presentation
+        </li>
+        <li class="fragment cList">
+          automates the compilation, validation and publishing processes
+        </li>
+        <li class="fragment cList">reuses the shared materials to avoid DRY</li>
       </ul>
     </div>
   </div>
