--- a/pages/03-what-is-asciidoc.html
+++ b/pages/03-what-is-asciidoc.html
@@ -1,25 +1,23 @@
 <div>
-    <div>What is AsciiDoc?</div>
+  <div>What is AsciiDoc?</div>
+  <div>
+    <hr />
+  </div>
+  <div>
     <div>
-        <hr />
+      <ul class="r-fit-text">
+        <li class="fragment cList">open source</li>
+        <li class="fragment cList">Antora's native content markup language</li>
+        <li class="fragment cList">readable, extensible and easy to learn</li>
+        <li class="fragment cList">supports all the structural and semantic elements for writing documentation</li>
+        <li class="fragment cList">Asciidoctor.js is the processor that converts AsciiDoc content to HTML</li>
+      </ul>
     </div>
-    <div>
-        <div>
-            <ul class="r-fit-text">
-                <li class="fragment cList">open source</li>
-                <li class="fragment cList">
-                    Antora's native content markup language
-                </li>
-                <li class="fragment cList">
-                    readable, extensible and easy to learn
-                </li>
-                <li class="fragment cList">
-                    supports all the structural and semantic elements for writing documentation
-                </li>
-                <li class="fragment cList">
-                    Asciidoctor.js is the processor that converts AsciiDoc content to HTML
-                </li>
-            </ul>
-        </div>
+    <div class="fragment" style="font-size: large">
+      for more information:
+      <a href="https://docs.antora.org/antora/latest/asciidoc/asciidoc/" target="_blank">
+        https://docs.antora.org/antora/latest/asciidoc/asciidoc/
+      </a>
     </div>
+  </div>
 </div>
