Add docs link into welcome content

--- a/pages/00-welcome.html
+++ b/pages/00-welcome.html
@@ -1,4 +1,6 @@
 <div style="font-size: 70px">
-  <span style="color: orange">Antora</span> and
-  <span style="color: cornflowerblue">AsciiDoc</span><br />Overview
+  <span style="color: orange">Antora</span> and <span style="color: cornflowerblue">AsciiDoc</span><br />Overview
+</div>
+<div class="fragment" style="font-size: x-large; margin-top: 100px">
+  <a href="https://docs.antora.org/antora/latest/" target="_blank"> https://docs.antora.org/antora/latest/ </a>
 </div>
