Add directory set content

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <section data-markdown="pages/02-what-is-antora.html"></section>
         <section data-markdown="pages/03-what-is-asciidoc.html"></section>
         <section data-markdown="pages/04-install-run.html"></section>
+        <section data-markdown="pages/05-directory-set.html"></section>
       </div>
     </div>
 
