--- a/pages/01-overview.html
+++ b/pages/01-overview.html
@@ -13,7 +13,7 @@
     </div>
     <div>
       <ul>
-        <li>Images</li>
+        <li>Xref and Links</li>
         <li>Partials</li>
         <li>Antora Playbook</li>
         <li>Run Antora</li>
