Add pages content

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <section data-markdown="pages/03-what-is-asciidoc.html"></section>
         <section data-markdown="pages/04-install-run.html"></section>
         <section data-markdown="pages/05-directory-set.html"></section>
+        <section data-markdown="pages/06-pages.html"></section>
       </div>
     </div>
 
