--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <section data-markdown="pages/04-install-run.html"></section>
         <section data-markdown="pages/05-directory-set.html"></section>
         <section data-markdown="pages/06-pages.html"></section>
+        <section data-markdown="pages/07-xref-and-links.html"></section>
       </div>
     </div>
 
