Add antora playbook content

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <section data-markdown="pages/06-pages.html"></section>
         <section data-markdown="pages/07-xref-and-links.html"></section>
         <section data-markdown="pages/08-partials.html"></section>
+        <section data-markdown="pages/09-antora-playbook.html"></section>
       </div>
     </div>
 
