Add sample notes for a few sections

--- a/pages/00-welcome.html
+++ b/pages/00-welcome.html
@@ -4,3 +4,4 @@
 <div class="fragment" style="font-size: x-large; margin-top: 100px">
   <a href="https://docs.antora.org/antora/latest/" target="_blank"> https://docs.antora.org/antora/latest/ </a>
 </div>
+<aside class="notes">Shhh, these are your private notes 📝</aside>
