--- a/pages/02-what-is-antora.html
+++ b/pages/02-what-is-antora.html
@@ -4,20 +4,22 @@
   <div>
     <div>
       <ul class="r-fit-text">
-        <li class="fragment cList">
-          eases to create and publish documentation for the tech writers
-        </li>
-        <li class="fragment cList">
-          transforms organized AsciiDoc contents in git repos into a website
-        </li>
-        <li class="fragment cList">
-          provides separation of content, configuration and presentation
-        </li>
-        <li class="fragment cList">
-          automates the compilation, validation and publishing processes
-        </li>
+        <li class="fragment cList">eases to create and publish documentation for the tech writers</li>
+        <li class="fragment cList">transforms organized AsciiDoc contents in git repos into a website</li>
+        <li class="fragment cList">provides separation of content, configuration and presentation</li>
+        <li class="fragment cList">automates the compilation, validation and publishing processes</li>
         <li class="fragment cList">reuses the shared materials to avoid DRY</li>
       </ul>
     </div>
   </div>
 </div>
+<aside class="notes">
+  <p>Here are the what is antora notes.</p>
+  <p>The second paragraph</p>
+  <div>
+    <ul>
+      <li>first item</li>
+      <li>second item</li>
+    </ul>
+  </div>
+</aside>
