Fragment some parts

--- a/pages/05-directory-set.html
+++ b/pages/05-directory-set.html
@@ -26,21 +26,21 @@
         <div class="int90">📄 nav.adoc</div>
         <div class="int30">📁 packages<span class="number">[8]</span></div>
       </div>
-      <div class="fragment" style="text-align: left;">
-        <p>
+      <div style="text-align: left;">
+        <p class="fragment">
           Antora collects and processes content source files according to a set of hierarchical files and directories it
           expects to find at a content source root.
         </p>
         <p>
           <ol>
-            <li>Content source root.</li>
-            <li>The descriptor file which is required at each content root</li>
-            <li>It must be located at the same level as antora.yml file</li>
-            <li>ROOT is reserved directory name and must be in all uppercase</li>
-            <li>Pages family directory (reserved directory name)</li>
-            <li>Partials family directory (reserved directory name)</li>
-            <li>Navigation file</li>
-            <li>It won’t be processed because located outside the modules</li>
+            <li class="fragment">Content source root.</li>
+            <li class="fragment">The descriptor file which is required at each content root</li>
+            <li class="fragment">It must be located at the same level as antora.yml file</li>
+            <li class="fragment">ROOT is reserved directory name and must be in all uppercase</li>
+            <li class="fragment">Pages family directory (reserved directory name)</li>
+            <li class="fragment">Partials family directory (reserved directory name)</li>
+            <li class="fragment">Navigation file</li>
+            <li class="fragment">It won’t be processed because located outside the modules</li>
           </ol>
         </p>
       </div>
