--- a/pages/07-xref-and-links.html
+++ b/pages/07-xref-and-links.html
@@ -1,22 +1,22 @@
 <div>
   <div>Xref and Links</div>
   <div><hr /></div>
-  <div style="text-align: left; font-size: x-large">
+  <div class="fragment" style="text-align: left; font-size: x-large">
     An AsciiDoc xref macro is used to create a source-to-source cross reference from a resource to a publishable
     resource.
   </div>
-  <div>
+  <div class="fragment">
     <img
       src="https://docs.antora.org/antora/latest/page/_images/xref-macro-with-resource-id-for-page.svg"
       alt="Xref macro structure for referencing a page"
       width="600px"
       style="background-color: white; padding: 15px" />
   </div>
-  <div>
+  <div class="fragment">
     <pre><code>//Page links within a module
 xref:mypage.adoc[My Page]</code></pre>
   </div>
-  <div>
+  <div class="fragment">
     <pre><code>//Page links between modules
 xref:modulename:mypage.adoc[My Page]</code></pre>
   </div>
