Add antora.yml content

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <section data-markdown="pages/07-xref-and-links.html"></section>
         <section data-markdown="pages/08-partials.html"></section>
         <section data-markdown="pages/09-antora-playbook.html"></section>
+        <section data-markdown="pages/10-antora-yml.html"></section>
         <section data-markdown="pages/11-run-antora.html"></section>
       </div>
     </div>
