--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <section data-markdown="pages/09-antora-playbook.html"></section>
         <section data-markdown="pages/10-antora-yml.html"></section>
         <section data-markdown="pages/11-run-antora.html"></section>
+        <section data-markdown="pages/12-the-end.html"></section>
       </div>
     </div>
 
