Add slide notes for welcome

--- a/pages/00-welcome.html
+++ b/pages/00-welcome.html
@@ -4,4 +4,20 @@
 <div class="fragment" style="font-size: x-large; margin-top: 100px">
   <a href="https://docs.antora.org/antora/latest/" target="_blank"> https://docs.antora.org/antora/latest/ </a>
 </div>
-<aside class="notes">Shhh, these are your private notes 📝</aside>
+<aside class="notes">
+  <div style="font-size: large !important">
+    <p>Let's start!</p>
+    <p>
+      In today's tech-talk, I will try to give you a quick overview about the Antora which is a site generator for tech
+      writers.
+    </p>
+    <p>
+      I prepared for you a 12-slides presentation to touch bullet points of the tool. I will try to keep the
+      presentation session as short as possible. Because I have prepared a demo in order to show the Antora in action.
+    </p>
+    <hr />
+    <p>If you would like to more information about Antora, you can find whatever you want in its own docs site.</p>
+    <hr />
+    <p>Now let's have a look what we will talk about today.</p>
+  </div>
+</aside>
