Add slide notes for overview

--- a/pages/01-overview.html
+++ b/pages/01-overview.html
@@ -22,4 +22,20 @@
     </div>
   </div>
 </div>
-<aside class="notes">Here are the overview notes.</aside>
+<aside class="notes">
+  <div style="font-size: large !important">
+    <p>At first, we will talk shortly about what Antora and AsciiDoc are.</p>
+    <p>Then with a few short command snippets, we will see what we need to install and run the Antora.</p>
+    <p>
+      Later on, we will talk about some fundamental components of the Antora such as Pages, Xrefs, Links and Partials.
+      In addition to that, we will try to understand the directory structure.
+    </p>
+    <p>
+      As the last steps of the presentation, we will see the two important files of the tool. Playbook file and Antora
+      yml file. We will shortly talk what these files are and what for they serve.
+    </p>
+    <p>After all, we will see the Antora in action.</p>
+    <hr />
+    <p>Let's start with "What is Antora?"</p>
+  </div>
+</aside>
