--- a/pages/02-what-is-antora.html
+++ b/pages/02-what-is-antora.html
@@ -8,7 +8,7 @@
         <li class="fragment cList">transforms organized AsciiDoc contents in git repos into a website</li>
         <li class="fragment cList">provides separation of content, configuration and presentation</li>
         <li class="fragment cList">automates the compilation, validation and publishing processes</li>
-        <li class="fragment cList">reuses the shared materials to avoid DRY</li>
+        <li class="fragment cList">reuses the shared materials to conform DRY</li>
       </ul>
     </div>
   </div>
