Add slide notes for antora

--- a/pages/02-what-is-antora.html
+++ b/pages/02-what-is-antora.html
@@ -14,12 +14,22 @@
   </div>
 </div>
 <aside class="notes">
-  <p>Here are the what is antora notes.</p>
-  <p>The second paragraph</p>
-  <div>
-    <ul>
-      <li>first item</li>
-      <li>second item</li>
-    </ul>
+  <div style="font-size: large !important">
+    <p>
+      Briefly, Antora is a site generator for tech writers that provides documentation pipeline for engineering teams.
+    </p>
+    <hr />
+    <p>It publishes documentation sites composed in AsciiDoc and sourced from multiple versioned repositories.</p>
+    <hr />
+    <p>It separates the concerns of configuration, presentation and the content.</p>
+    <hr />
+    <p>With help of the Antora CLI, it helps you to automate the processes.</p>
+    <hr />
+    <p>By using the shared materials, it conforms to DRY principle.</p>
+    <hr />
+    <p>
+      These are the some practices that Antora includes. For more you can look into the its documentation website.
+      <b>Let's go with AsciiDoc.</b>
+    </p>
   </div>
 </aside>
