Update side notes

--- a/pages/03-what-is-asciidoc.html
+++ b/pages/03-what-is-asciidoc.html
@@ -21,3 +21,21 @@
     </div>
   </div>
 </div>
+<aside class="notes">
+  <div style="font-size: large !important">
+    <p>AsciiDoc is a lightweight and semantic markup language primarily designed for technical documentation.</p>
+    <hr />
+    <p>It is open-source.</p>
+    <hr />
+    <p>Ideal for writing documentation because it is easy-to-learn and readable and extensible</p>
+    <hr />
+    <p>Supports structural and semantic elements to produce a variety of rich output formats</p>
+    <hr />
+    <p>Its parser Asciidoctor.js, loads, parses and converts documents extremely quickly</p>
+    <hr />
+    <p>
+      For more you can look into the its documentation website.
+      <b>Now let's have a quick look how to install and run Antora.</b>
+    </p>
+  </div>
+</aside>
