--- a/pages/04-install-run.html
+++ b/pages/04-install-run.html
@@ -33,3 +33,27 @@ $ npm i -D -E @antora/cli@3.1 @antora/site-generator@3.1</code>
     </div>
   </div>
 </div>
+<aside class="notes">
+  <div style="font-size: large !important">
+    <p>
+      At very first, node js must be installed. To install it, run this command. You can use the latest version of the
+      node.js
+    </p>
+    <hr />
+    <p>
+      After that you need to install Antora. The first line will create a package.json in your antora project root
+      folder. And the second one will install the Antora CLI and site generator.
+    </p>
+    <hr />
+    <p>
+      When the installation complete, you can verify the installation by checking the version of the Antora. And you
+      should have this output.
+    </p>
+    <hr />
+    <p>After all, by using the following command, you can run Antora on your local.</p>
+    <hr />
+    <p>
+      <b>Let's continue with the directory structure of the Antora.</b>
+    </p>
+  </div>
+</aside>
