--- a/pages/06-pages.html
+++ b/pages/06-pages.html
@@ -5,7 +5,7 @@
     Antora automatically generates one HTML site page for each source file assigned to the pages family. Another way to
     think about this: one AsciiDoc page file in equals one HTML page out.
   </div>
-  <div class="fragment">
+  <div>
     <pre>
         <code>= Page Title
 :description: page description
@@ -19,3 +19,12 @@ The first paragraph of the section.
     </pre>
   </div>
 </div>
+<aside class="notes">
+  <div style="font-size: large !important">
+    <p>
+      Pages are the source files for our content. Antora will generate a HTML page for each AsciiDoc page. With the help
+      of the AsciiDoc syntax, Antora allows us to create rich-formatted contents.
+    </p>
+    <hr />
+  </div>
+</aside>
