--- a/pages/08-partials.html
+++ b/pages/08-partials.html
@@ -4,13 +4,27 @@
   <div style="font-size: x-large; text-align: left">
     <p>Partials are good for storing snippets of content that you reuse in one or more pages throughout your site.</p>
     <ul>
-      <li class="cList">Partial files are stored in a partials directory.</li>
-      <li class="cList">
+      <li>Partial files are stored in a partials directory.</li>
+      <li>
         A partial’s filename can’t contain spaces because the AsciiDoc include directive doesn’t accept values with
         spaces.
-      </li class="cList">
-      <li class="cList">A partial must be referenced by an include directive from a page.</li>
-      <li class="cList">Antora doesn’t publish partial files as individual site pages.</li>
+      </li>
+      <li>A partial must be referenced by an include directive from a page.</li>
+      <li>Antora doesn’t publish partial files as individual site pages.</li>
     </ul>
   </div>
 </div>
+<aside class="notes">
+  <div style="font-size: large !important">
+    <p>Partials are can be taken as reusable content snippets. There are a few key points that we need to know.</p>
+    <hr />
+    <p>They must be stored in partials directory</p>
+    <hr />
+    <p>Filename cannot contain spaces</p>
+    <hr />
+    <p>They must be referenced by an include directive</p>
+    <hr />
+    <p>And they cannot be published as an individual page</p>
+    <hr />
+  </div>
+</aside>
