--- a/pages/10-antora-yml.html
+++ b/pages/10-antora-yml.html
@@ -4,16 +4,16 @@
   <div style="font-size: x-large; text-align: left">
     <span> antora.yml is a configuration file that serves two crucial functions. </span>
     <ol style="margin-top: 30px">
-      <li class="fragment cList">
+      <li class="cList">
         It signals to Antora that it should find a sibling modules directory that contains source files that belong to a
         component version.
       </li>
-      <li class="fragment cList">
+      <li class="cList">
         It provides the required and optional component version metadata that Antora assigns to the source files
       </li>
     </ol>
   </div>
-  <div class="fragment">
+  <div>
     <pre>
         <code>name: antora-demo
 version: v4.0
@@ -22,3 +22,9 @@ nav:
     </pre>
   </div>
 </div>
+<aside class="notes">
+  <div style="font-size: large !important">
+    <p></p>
+    <hr />
+  </div>
+</aside>
