--- a/pages/11-run-antora.html
+++ b/pages/11-run-antora.html
@@ -4,21 +4,21 @@
     <hr />
   </div>
   <div>
-    <div class="fragment" style="margin-bottom: 50px">
+    <div style="margin-bottom: 50px">
       <pre>
         <code>$ npx antora --fetch antora-playbook.yml</code>
       </pre>
     </div>
     <div style="font-size: x-large; text-align: left">
       <ul>
-        <li class="fragment cList">In terminal, make sure you're in docs-site directory</li>
-        <li class="fragment cList">
+        <li class="cList">In terminal, make sure you're in docs-site directory</li>
+        <li class="cList">
           Navigate to the <code class="singleCode">docs-site/build/site</code> directory and open the
           <code class="singleCode">index.html</code> file
         </li>
       </ul>
     </div>
-    <div class="fragment">
+    <div>
       <pre>
             <code>runtime:
   fetch: true</code>
@@ -27,5 +27,11 @@
   </div>
 </div>
 <aside class="notes">
-  <p>npx is for executable npm packages.</p>
+  <div style="font-size: large !important">
+    <p>npx is for executable npm packages.</p>
+    <p>
+      NPM is a package manager used to install, delete, and update Javascript packages on your machine. NPX is a package
+      executer, and it is used to execute javascript packages directly
+    </p>
+  </div>
 </aside>
