--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
       <div class="slides">
         <section data-markdown="pages/00-welcome.html"></section>
         <section data-markdown="pages/01-overview.html"></section>
-        <section data-markdown="pages/02-what-is-antora.html"></section>
-        <section data-markdown="pages/03-what-is-asciidoc.html"></section>
-        <section data-markdown="pages/04-install-run.html"></section>
-        <section data-markdown="pages/05-directory-set.html"></section>
-        <section data-markdown="pages/06-pages.html"></section>
-        <section data-markdown="pages/07-xref-and-links.html"></section>
-        <section data-markdown="pages/08-partials.html"></section>
-        <section data-markdown="pages/09-antora-playbook.html"></section>
-        <section data-markdown="pages/10-antora-yml.html"></section>
-        <section data-markdown="pages/11-run-antora.html"></section>
-        <section data-markdown="pages/12-the-end.html"></section>
+        <section data-markdown="pages/02-what-is-asciidoc.html"></section>
+        <section data-markdown="pages/03-why-use-asciidoc.html"></section>
+        <section data-markdown="pages/04-getting-started-asciidoc.html"></section>
+        <section data-markdown="pages/05-what-is-antora.html"></section>
+        <section data-markdown="pages/06-why-use-antora.html"></section>
+        <section data-markdown="pages/07-getting-started-antora.html"></section>
+        <section data-markdown="pages/08-antora-components.html"></section>
+        <section data-markdown="pages/09-integrate-antora.html"></section>
+        <section data-markdown="pages/10-advanced-antora.html"></section>
+        <section data-markdown="pages/11-the-end.html"></section>
       </div>
     </div>
 
