--- a/pages/00-welcome.html
+++ b/pages/00-welcome.html
@@ -1,23 +1,27 @@
-<div style="font-size: 70px">
-  <span style="color: orange">Antora</span> and <span style="color: cornflowerblue">AsciiDoc</span><br />Overview
+<div style="font-size: 50px">
+  An Introduction to<br /><span style="color: orange; font-size: 70px">Antora</span><br />and<br /><span
+    style="color: cornflowerblue; font-size: 70px"
+    >AsciiDoc</span
+  ><br />for Better Documentation
 </div>
-<div class="fragment" style="font-size: x-large; margin-top: 100px">
+<div class="fragment footer-note">
   <a href="https://docs.antora.org/antora/latest/" target="_blank"> https://docs.antora.org/antora/latest/ </a>
 </div>
 <aside class="notes">
   <div style="font-size: large !important">
     <p>Let's start!</p>
     <p>
-      In today's tech-talk, I will try to give you a quick overview about the Antora which is a site generator for tech
-      writers.
+      During today's tech-talk, I'll provide you with a brief introduction to Antora and Asciidoc, including a rundown
+      of the key features of these tools. Following this overview, I'll demonstrate how these tools work in action,
+      bringing the concepts to life and helping you gain a deeper understanding of their capabilities.
     </p>
     <p>
-      I prepared for you a 12-slides presentation to touch bullet points of the tool. I will try to keep the
-      presentation session as short as possible. Because I have prepared a demo in order to show the Antora in action.
+      <b><em>click for next</em></b>
     </p>
-    <hr />
-    <p>If you would like to more information about Antora, you can find whatever you want in its own docs site.</p>
-    <hr />
+    <p>
+      To learn more about Antora, you can explore its official documentation site, which provides a comprehensive range
+      of resources to help you get started, troubleshoot any issues, and discover advanced features.
+    </p>
     <p>Now let's have a look what we will talk about today.</p>
   </div>
 </aside>
