--- a/pages/01-overview.html
+++ b/pages/01-overview.html
@@ -1,23 +1,23 @@
 <div>
-  <div>Overview</div>
+  <div class="title">Overview</div>
   <div><hr /></div>
   <div>
-    <div style="float: left">
+    <div class="content" style="float: left; width: 50%">
       <ul>
-        <li>What is Antora?</li>
         <li>What is AsciiDoc?</li>
-        <li>Install and Run</li>
-        <li>Directory Set</li>
-        <li>Pages</li>
+        <li>Why use AsciiDoc?</li>
+        <li>Getting started with AsciiDoc</li>
+        <li>What is Antora?</li>
+        <li>Why use Antora?</li>
       </ul>
     </div>
-    <div>
+    <div class="content" style="float: left; width: 50%">
       <ul>
-        <li>Xref and Links</li>
-        <li>Partials</li>
-        <li>Antora Playbook</li>
-        <li>Antora YML File</li>
-        <li>Run Antora</li>
+        <li>Getting started with Antora</li>
+        <li>Antora Components</li>
+        <li>Integrating Antora with Other Tools</li>
+        <li>Advanced Antora Features</li>
+        <li>Q&A and Demo</li>
       </ul>
     </div>
   </div>
